# ML_QDM_Meneses_et_al

./: .gitignore  README.md  Stage4_phys_model_all_Train_s1s4s5_Test_s2s3.csv  _config.yml
Codes/: Acceleration_data_model.ipynb  Auxiliar_functions.ipynb  ML_Analysis.ipynb  ML_General.ipynb  ML_Stage1.ipynb  ML_Stage2.ipynb  ML_Stage3.ipynb  ML_Stage4.ipynb  ML_Stage5.ipynb  ML_Stage6.ipynb  ML_Stage7.ipynb
Codes/ML_parameters/: ML_RF_S1to6.json  ML_RF_S7.json  ML_gen_pars_S1to6.json  ML_gen_pars_S7.json
Data/: lin_approx_data_zAut_segm1.csv  lin_approx_data_zAut_segm5.csv  phys_model_data_zAut_segm1.csv  phys_model_data_zAut_segm5.csv
MLQDM/: README.md  pyproject.toml
MLQDM/src/MLQDM/: MLanalysis.py  MLmodel.py  dataprocess.py  elevphysmodel.py  general.py  simulations.py  timewindows.py
Results/: Stage1_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage1_phys_model_all_Train_s1s4s5_Test_s2s3.csv  Stage2_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage2_phys_model_all_Train_s1s4s5_Test_s2s3.csv  Stage3_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage3_phys_model_all_Train_s1s4s5_Test_s2s3.csv  Stage4_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage4_phys_model_all_Train_s1s4s5_Test_s2s3.csv  Stage5_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage5_phys_model_all_Train_s1s4s5_Test_s2s3.csv  Stage6_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage6_phys_model_all_Train_s1s4s5_Test_s2s3.csv  Stage7_lin_approx_all_Train_s1s4s5_Test_s2s3.csv  Stage7_phys_model_all_Train_s1s4s5_Test_s2s3.csv
_includes/: head-custom-google-analytics.html
(+3 files in other folders)
