[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MLQDM"
version = "1.0.0"
authors = [
  { name="Fernando Meneses", email="fertmeneses@gmail.com" },
]
description = "Machine Learning real-time object tracking using Quantum Diamond Magnetometry"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Fertmeneses/MLQDM"
Issues = "https://github.com/Fertmeneses/MLQDM/issues"
